--- a/index.css
+++ b/index.css
@@ -28,8 +28,176 @@
   padding-right: 25.5px;
 }
 
+.header_nav-leftlist__link {
+  display: inline-block;
+  transition-property: all;
+  transition: all ease 0.6s;
+}
+
+.header_nav-leftlist__link:hover {
+  display: inline-block;
+  transform: scale(1.2);
+  transition: 0.6s;
+  color: rgb(70, 40, 0);
+}
+
 .header_title {
   text-align: center;
   padding-bottom: 190px;
   margin-left: 31%;
+}
+
+.artifacts {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 64px 150px;
+}
+.artifacts_header {
+  max-width: 745px;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 72px;
+  line-height: 80px;
+}
+.artifacts_button-discover {
+  margin: 60px 0;
+  border: 1px solid #000000;
+  border-radius: 9999px;
+  background-color: #fff;
+  text-transform: lowercase;
+  padding: 5px 25px;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  text-transform: lowercase;
+}
+.artifacts_gallery {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+}
+.artifacts_gallery-1 {
+  margin-top: 120px;
+}
+.artifacts_gallery-2 {
+  margin-bottom: 120px;
+}
+.artifacts_gallery-3 {
+  margin-bottom: 120px;
+}
+.artifacts p {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  margin-bottom: 15px;
+}
+
+.artifacts_button-more {
+  margin-top: 20px;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  text-transform: lowercase;
+  border: 1px solid #000000;
+  border-radius: 9999px;
+  padding: 5px 25px;
+  background-color: #fff;
+}
+
+.proposals {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 64px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.proposals_title {
+  max-width: 315px;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  text-align: center;
+}
+.proposals_main {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 95px 0;
+}
+.proposals_main-img1 {
+  margin-bottom: 130px;
+}
+.proposals_main-list {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 52px;
+  line-height: 80px;
+  text-align: center;
+}
+.proposals_main-img2 {
+  margin-top: 180px;
+}
+.proposals_button {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  text-transform: lowercase;
+  border: 1px solid #000000;
+  border-radius: 9999px;
+  background-color: #fff;
+  padding: 5px 25px;
+}
+.projects {
+  margin: 190px auto;
+  max-width: 1200px;
+}
+.projects_title {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 51px;
+  line-height: 80px;
+  text-align: center;
+}
+.projects_description {
+  font-family: "Cardo";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  text-align: center;
+  margin: 15px 0 63px;
+}
+.projects_list {
+  display: flex;
+  justify-content: space-between;
+  user-select: none;
+}
+.projects_list-item img {
+  margin-bottom: 15px;
+}
+.proposals_main-list__link {
+  display: inline-block;
+  transition-property: all;
+  transition: all ease 0.6s;
+}
+.proposals_main-list__link:hover {
+  display: inline-block;
+  transform: scale(1.2);
+  transition: 0.6s;
+  color: rgb(189, 126, 53);
 }
