--- a/index.css
+++ b/index.css
@@ -161,6 +161,17 @@
   background-color: #fff;
   padding: 5px 25px;
 }
+.proposals_main-list__link {
+  display: inline-block;
+  transition-property: all;
+  transition: all ease 0.6s;
+}
+.proposals_main-list__link:hover {
+  display: inline-block;
+  transform: scale(1.2);
+  transition: 0.6s;
+  color: rgb(189, 126, 53);
+}
 .projects {
   margin: 190px auto;
   max-width: 1200px;
@@ -190,30 +201,122 @@
 .projects_list-item img {
   margin-bottom: 15px;
 }
-.proposals_main-list__link {
-  display: inline-block;
-  transition-property: all;
-  transition: all ease 0.6s;
-}
-.proposals_main-list__link:hover {
-  display: inline-block;
-  transform: scale(1.2);
-  transition: 0.6s;
-  color: rgb(189, 126, 53);
-} */
+
 .services {
+  margin: 0 auto;
+  max-width: 1200px;
+  text-align: center;
 }
 .services_title {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 80px;
 }
 .services_list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  row-gap: 100px;
+  column-gap: 50px;
+  margin: 64px 67px 170px;
 }
 .services_list-item {
 }
 .services_list-item__title {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 36px;
+  margin-bottom: 20px;
 }
 .services_list-item__text {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
 }
 .services_contact {
+  font-family: "Cardo";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
 }
 .services_call {
+  border: 1px solid #000000;
+  border-radius: 9999px;
+  background-color: #fff;
+  text-transform: lowercase;
+  padding: 5px 25px;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  text-transform: lowercase;
+  margin: 30px 0 150px;
+} */
+.novelties {
+  margin: 0 auto;
+  max-width: 1200px;
+  position: relative;
+  padding: 0 67px;
+}
+.novelties_title {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 53px;
+  line-height: 80px;
+}
+.novelties_arrows {
+  position: absolute;
+  top: 15px;
+  right: 69px;
+}
+.novelties_arrows-leftarrow {
+  position: absolute;
+  top: 14px;
+  left: 14px;
+}
+.novelties_arrows-leftcircle:hover {
+  cursor: pointer;
+}
+.novelties_arrows-leftarrow:hover {
+  cursor: pointer;
+}
+.novelties_arrows-rightarrow {
+  position: absolute;
+  top: 12px;
+  right: 13px;
+}
+.novelties_arrows-rightarrow:hover {
+  cursor: pointer;
+}
+.novelties_arrows-rightcircle:hover {
+  cursor: pointer;
+}
+.novelties_viewall {
+  border: 1px solid #000000;
+  border-radius: 9999px;
+  background-color: #fff;
+  text-transform: lowercase;
+  padding: 2px 25px;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  text-transform: lowercase;
+  margin: 10px 0 70px 0;
+}
+.novelties_list {
+  display: flex;
+  justify-content: space-between;
+}
+.novelties_list-item {
 }
