--- a/reset.css
+++ b/reset.css
@@ -131,11 +131,13 @@ table {
 }
 button {
   cursor: pointer;
+  transition-property: all;
+  transition: all ease 0.6s;
 }
 
 button:hover {
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
+  transition: 0.6s;
 }
 a {
   color: black;
