--- a/index.css
+++ b/index.css
@@ -279,6 +279,10 @@
   right: 69px;
 }
 
+.hidden {
+  display: none;
+}
+
 .novelties_arrows-leftarrow {
   margin-right: 12px;
   position: relative;
@@ -304,7 +308,8 @@
   cursor: pointer;
   transition: 0.6s;
 }
-.novelties_viewall {
+.novelties_viewall,
+.novelties_viewless {
   border: 1px solid #000000;
   border-radius: 9999px;
   background-color: #fff;
@@ -322,18 +327,27 @@
 
 .container {
   margin: 0 auto;
-  background: rgba(254, 0, 0, 0.952);
   width: 1057px;
+  overflow: hidden;
 }
 
 .novelties_list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   column-gap: 20px;
-  width: 2373px;
+  width: 3171px;
   position: relative;
   transition: all ease 1s;
 }
+
+.novelties_list-all {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
 .novelties_list-item {
 }
 .novelties_list-item img {
