--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+body {
+}
 .header {
   max-width: 1200px;
   margin: 0 auto;
@@ -8,7 +10,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 50px 40px 400px 40px;
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -54,7 +56,7 @@
 }
 .artifacts_header {
   max-width: 745px;
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 72px;
@@ -67,7 +69,7 @@
   background-color: #fff;
   text-transform: lowercase;
   padding: 5px 25px;
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -89,7 +91,7 @@
   margin-bottom: 120px;
 }
 .artifacts p {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -99,7 +101,7 @@
 
 .artifacts_button-more {
   margin-top: 20px;
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -121,7 +123,7 @@
 }
 .proposals_title {
   max-width: 315px;
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -139,7 +141,7 @@
   margin-bottom: 130px;
 }
 .proposals_main-list {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 300;
   font-size: 52px;
@@ -150,7 +152,7 @@
   margin-top: 180px;
 }
 .proposals_button {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -177,7 +179,7 @@
   max-width: 1200px;
 }
 .projects_title {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 51px;
@@ -185,7 +187,7 @@
   text-align: center;
 }
 .projects_description {
-  font-family: "Cardo";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -208,7 +210,7 @@
   text-align: center;
 }
 .services_title {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
@@ -223,7 +225,7 @@
   margin: 64px 67px 170px;
 }
 .services_list-item__title {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -231,14 +233,14 @@
   margin-bottom: 20px;
 }
 .services_list-item__text {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
   line-height: 25px;
 }
 .services_contact {
-  font-family: "Cardo";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -250,7 +252,7 @@
   background-color: #fff;
   text-transform: lowercase;
   padding: 5px 25px;
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -264,7 +266,7 @@
   position: relative;
 }
 .novelties_title {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 53px;
@@ -315,7 +317,7 @@
   background-color: #fff;
   text-transform: lowercase;
   padding: 2px 25px;
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -356,14 +358,14 @@
 }
 
 .novelties_list-item__descr {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 28px;
 }
 .novelties_list-item__price {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -377,7 +379,7 @@
   position: relative;
 }
 .newsletter_title {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 53px;
@@ -403,7 +405,7 @@
   left: 20%;
 }
 .newsletter_content-text {
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -433,7 +435,7 @@
 
 .newsletter_info-item {
   margin-right: 16px;
-  font-family: "Lato";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -446,7 +448,7 @@
   margin: 0 64px;
 }
 .newsletter_about-item {
-  font-family: "Cardo";
+  font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
