ceckbox button added

--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@
   border-radius: 9999px !important;
   background-color: #fff;
   text-transform: lowercase;
-  padding: 5px 25px;
+  padding: 5px 25px 0px;
   font-family: "Solitreo";
   font-style: normal;
   font-weight: 400;
@@ -107,7 +107,7 @@
   text-transform: lowercase;
   border: 1px solid #000000;
   border-radius: 9999px !important;
-  padding: 5px 25px;
+  padding: 5px 25px 0px;
   background-color: #fff;
 }
 
@@ -159,7 +159,7 @@
   border: 1px solid #000000;
   border-radius: 9999px !important;
   background-color: #fff;
-  padding: 5px 25px;
+  padding: 5px 25px 0px;
 }
 .proposals_main-list__link {
   display: inline-block;
@@ -474,6 +474,21 @@
   height: 40px;
   padding-left: 15px;
   font-size: 20px;
+}
+.newsletter_button {
+  margin-top: 30px;
+  border: 1px solid #000000;
+  border-radius: 9999px !important;
+  background-color: #fff;
+  text-transform: lowercase;
+  padding: 5px 25px 0px;
+  font-family: "Solitreo";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 25px;
+  text-transform: lowercase;
+  display: none;
 }
 .newsletter_info {
   display: flex;
